@@ -12,6 +12,7 @@ jboot v2.0-rc.4:
 新增：jboot.app.scanner 配置，用于对 jboot 类扫描器进行配置
 优化：升级 JFinal 到 3.6 最新版本
 优化：升级 JFinal-Undertow 到 1.5 最新版本
+优化：升级 JFinal-Weixin 到 2.3 最新版本
 优化：修改 JbootAppListener 的 onJfinalStarted() 为 onJfinalStart() ，保持和JFinal 3.6 一致
 优化：save() 和 saveOrUpdate() 方法返回 Object，Object 是 Model 的主键值，方便 RPC 调用
 优化：增强 SPI 功能，当未在 META-INF 定义 Service 接口的时候，可以进行 SPI 发现
